--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -7,7 +7,7 @@
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">
       This is a simple movie search application, where users can search for
-      their favourite movie and all their thoughts on it.
+      their favorite movie and all their thoughts on it.
     </p>
     <hr class="my-4" />
     <p>This is created by Manish Modwani.</p>
