--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -10,7 +10,7 @@
       their favorite movie and all their thoughts on it.
     </p>
     <hr class="my-4" />
-    <p>This is created by Manish Modwani.</p>
+    <p>This App is created by Manish Modwani.</p>
     <a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up!</a>
   </div>
 </div>
