--- a/views/Result.ejs
+++ b/views/Result.ejs
@@ -1,5 +1,6 @@
 <%- include("./partials/header")%>
 <div class="container viewPage">
+  <br>
   <h1>Search Results are!</h1>
   <div class="row">
     <% data["Search"].forEach(function(movie) { %>
@@ -15,7 +16,7 @@
       <img class="card-img-top" src="<%=movie.Poster%>" alt="Image Not Found" />
       <div class="card-body">
         <h5 class="card-title"><%=movie["Title"]%></h5>
-        <p class="card-text">Released on <%=movie["Year"]%></p>
+        <p class="card-text">Released in <%=movie["Year"]%></p>
         <a href="/result/<%=movie["imdbID"]%>" class="btn btn-primary">Know More</a>
       </div>
     </div>
