--- a/views/Result.ejs
+++ b/views/Result.ejs
@@ -18,7 +18,9 @@
         <h5 class="card-title"><%=movie["Title"]%></h5>
         <p class="card-text">Released in <%=movie["Year"]%></p>
         <a href="/result/<%=movie["imdbID"]%>" class="btn btn-primary">Know More</a>
+        <a href="https://www.imdb.com/title/<%=movie["imdbID"]%>" class="btn btn-danger">IMDB Page</a>
       </div>
+      
     </div>
     <% }) %>
   </div>
