--- a/views/Info.ejs
+++ b/views/Info.ejs
@@ -8,8 +8,10 @@
     <div class="card-header border-0">
       <img src="<%=movie.Poster%>" alt="Poster" />
     </div>
+    
     <div class="card-block px-2">
       <h4 class="card-title"><%=movie.Title%></h4>
+      <p class="card-title">Released on - <%=movie.Released%></p>
       <p class="card-title">IMDB Rating - <%=movie.imdbRating%></p>
       
       <p class="card-text"><b>PLOT</b><br><%=movie.Plot%></p>
