--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -4,13 +4,13 @@
   <br>
   <h2>Movie Search Application!</h2>
   <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
+    <h2 class="display-4">Hello, World!</h2>
     <p class="lead">
-      This is a simple movie search application, where users can search for
-      their favorite movie and all their thoughts on it.
+      This is a simple Movie Search Application, where users can search for
+      their favorite movie and find relevant information.
     </p>
     <hr class="my-4" />
-    <p>This App is created by Manish Modwani.</p>
+    <p>Made by Manish Modwani.</p>
     <a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up!</a>
   </div>
 </div>
